    \item Add dupDosageCorAcrossDatasets.
    \item Add getGenotypeSelection method to MatrixGenotypeReader.
  }
}
\section{Changes in version 1.13.8}{
  \itemize{
    \item Add drop=TRUE argument to getVariable, etc.
  }
}
\section{Changes in version 1.13.9}{
  \itemize{
    \item Add use.names argument to getGenotype and getGenotype selection
    \item Add order=c("file", "selection") argument to getGenotypeSelection
    \item duplicateDiscordanceAcrossDatasets and dupDosageCorAcrossDatasets will not match on unmapped SNPs
  }
}
\section{Changes in version 1.13.21}{
  \itemize{
    \item assocRegression replaces assocTestRegression. Only one model is allowed per function call.
    \item assocCoxPH replaces assocTestCPH. Output format is now similar to assocRegression.
    \item exactHWE replaces gwasExactHWE.
    \item assocRegression, assocCoxPH, and exactHWE include the option to select blocks of SNPs by index for easier parallelization.
    \item scan.chromosome.filter is no longer an option; use setMissingGenotypes to filter data prior to running other functions.
  }
}
\section{Changes in version 1.13.22}{
  \itemize{
    \item Removed "outfile" arguments from batchChisqTest, batchFisherTest, and mendelErr. Saving output to a file should happen outside the function calls.
    \item batchChisqTest and batchFisherTest have snp.include arguments to run on individual SNPs. Using batchFisherTest with this argument is recommended to replace the deprecated assocTestFisherExact.
  } 
}
\section{Changes in version 1.13.23}{
  \itemize{
    \item convertGdsNcdf works for transposed (sample x snp) genotype files.
  } 
}
\section{Changes in version 1.13.24}{
  \itemize{
    \item Added data tables for genome build 38: centromeres.hg38.RData, pseudoautosomal.hg38.RData, HLA.hg38.RData, pcaSnpFilters.hg38.RData.
  } 
}
\section{Changes in version 1.13.26}{
  \itemize{
    \item Added getScanAnnotation, getSnpAnnotation accessors for GenotypeData objects.
  } 
}

